--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Adopt Ruff
+name: Check with Ruff linter
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  adopt-ruff:
+  ruff:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -24,4 +24,4 @@ jobs:
         run: pip install ruff
 
       - name: Run the adopt-ruff action
-        uses: ScDor/adopt-ruff@master
+        run: ruff check
