--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: yarosvetk/notigram
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
 
       - name: Build and push Docker image
         id: push
