Reformat dockerhub.yml

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -4,6 +4,10 @@ on:
   release:
     types: [published]
 
+env:
+    REGISTRY: docker.io
+    IMAGE_NAME: yarosvetk/notigram
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -28,7 +32,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          images: ${{ env.IMAGE_NAME}}
 
       - name: Build and push Docker image
         id: push
