Hadolint action fix

--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   hadolint:
-    name: Hadolint
     runs-on: ubuntu-latest
+    steps:
       - name: Check out repository code
         uses: actions/checkout@v4
 
