--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           images: ${{ env.IMAGE_NAME}}
 
+      - name: Set date tag
+        id: date
+        run: |
+          # Формируем тег в формате vYY.MM.DD, например v25.10.27
+          echo "tag=v$(date +'%y.%m.%d')" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -42,7 +48,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ steps.date.outputs.tag }}
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
